# API

./: .env  README.md  pyproject.toml
api/: application.py  main.py
api/config/: auth_config.py  database.py  log_config.py  settings.py
api/controller/: task_controller.py  usuario_controller.py
api/domain/dto/: dtos.py
api/domain/model/: models.py
api/domain/util/: utils.py
api/repository/: task_repository.py
api/service/: auth_service.py  task_service.py
controller/: auth_controller.py  usuario_controller.py
logs/: fastapi.log.2024-07-03
