[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["DayanaIngrid <dayanaingrid.040@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
